@@ -45,6 +45,9 @@ abstract class modArticlesNewsHelper
 		// Category filter
 		$model->setState('filter.category_id', $params->get('catid', array()));
 
+		// Filter by language
+		$model->setState('filter.language',$app->getLanguageFilter());
+
 		// Set ordering
 		$ordering = $params->get('ordering', 'a.publish_up');
 		$model->setState('list.ordering', $ordering);
