@@ -31,6 +31,7 @@ $ -> Language fix or change
  # [#22057] [patch] Broken unit tests for some form fields (Artyom Bisyarin)
  # [#21644] [patch] Unable to get group of a form field (Artyom Bisyarin)
  # [#22770] System - Language filter plugin is buggy if the link is comes from the home page menu
+ # [#22769] Some language filtering missing
 
 
 8-Oct-2010 Christophe Demko
